tests/NormalTests/paczka1/fuzzy1/28750528.err
Error in line 10: RuE A29 64,1
Error in line 25: Ddd A926 9,2
Error in line 26: S560 A926 44,8
Error in line 35: RuE S46 97,54
